[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/misc/world/doors/wood_door_closed.png" type="Texture" id=1]
[ext_resource path="res://assets/misc/world/doors/wood_door_open.png" type="Texture" id=2]
[ext_resource path="res://src/Entities/Misc/TriggerUse.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Scripts/Misc/Doors/DefaultDoor.gd" type="Script" id=4]
[ext_resource path="res://src/Entities/Misc/StaticEntity.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/Entities/Misc/TriggerEntity.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 96 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 64 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 64, 64 )

[node name="Door" type="Node2D"]
script = ExtResource( 4 )

[node name="Closed" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="StaticEntity" parent="Closed" instance=ExtResource( 5 )]
collision_layer = 20
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Closed/StaticEntity"]
position = Vector2( -32, 0 )
shape = SubResource( 1 )

[node name="Open" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="TriggerManual" parent="." instance=ExtResource( 3 )]
node_caller = "$Parent"
wait_time = 2.0
call_function = "toggle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerManual"]
position = Vector2( 32, 0 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="TriggerManual"]
position = Vector2( -96, 0 )
shape = SubResource( 2 )

[node name="TriggerAutomatic" parent="." instance=ExtResource( 6 )]
node_caller = "$Parent"
call_function_enter = "open"
call_function_exit = "close"
activated_by = "$Players"

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerAutomatic"]
position = Vector2( -32, 0 )
shape = SubResource( 3 )
